--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 </head>
 <body>
     <header class="header_page">
-        <nav class="navigation">
+        <nav class="nav">
             <a href="#">
                 <img src="images/logo.png" alt="logo">
             </a>
 
-            <ul class="navigation_list">
+            <ul class="nav_list">
                 <li>
-                    <a href="#" class="navigation_list_title">Main page</a>
+                    <a href="#" class="nav_list_title">Main page</a>
                 </li>
                 <li>
-                    <a href="#" class="navigation_list_title">Promotions</a>
+                    <a href="#" class="nav_list_title">Promotions</a>
                 </li>
                 <li>
-                    <a href="#" class="navigation_list_title">About Us</a>
+                    <a href="#" class="nav_list_title">About Us</a>
                 </li>
             </ul>
 
-            <button class="navigation_button">
-
+            <button type="button" class="nav_button">
+                <img src="/images/basket.png" alt="basket">
             </button>
         </nav>
     </header>
