--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
                 <img src="/images/basket.png" alt="basket">
             </button>
         </nav>
+
+        <div class="container_page_header">
+            <ul class="text_header_list">
+                <li>
+                    <p class="text_header">Fast delivery for you</p>
+                </li>
+                <li>
+                    <p class="text_header_discount">Make your first order and get a 50% discount</p>
+                </li>
+                <li>
+                    <button type="button" class="container_button_header">Order</button>
+                </li>
+            </ul>
+        </div>
     </header>
 
     <main>
