--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <button type="button" class="container_button_header">Order</button>
                 </li>
             </ul>
+            <div>
+                <img src="images/burger.png" alt="burger" width="642" height="600">
+            </div>
         </div>
     </header>
 
