--- a/index.html
+++ b/index.html
@@ -47,8 +47,37 @@
         </div>
     </header>
 
-    <main>
-
+    <main class="main_page">
+        <section class="container_catalog">
+            <h1 class="catalog_title">Menu</h1>
+            <ul class="catalog_list">
+                <li class="catalog_item">
+                    <img src="/images/burgers.png" alt="burgers" width="450" height="300">
+                    <p class="catalog_item_text">Burgers</p>
+                </li>
+                <li class="catalog_item">
+                    <img src="/images/chicken_dishes.png" alt="chicken_dishes" width="450" height="300">
+                    <p class="catalog_item_text">Chiken dishes</p>
+                </li>
+                <li class="catalog_item">
+                    <img src="/images/warm_meals.png" alt="warm_meals" width="450" height="300">
+                    <p class="catalog_item_text">Warm meals</p>
+                </li>
+                <li class="catalog_item">
+                    <img src="/images/refreshments.png" alt="refreshments" width="450" height="300">
+                    <p class="catalog_item_text">Refreshments</p>
+                </li>
+                <li class="catalog_item">
+                    <img src="/images/salads.png" alt="salads" width="450" height="300">
+                    <p class="catalog_item_text">Salads</p>
+                </li>
+                <li class="catalog_item">
+                    <img src="/images/desserts.png" alt="desserts" width="450" height="300">
+                    <p class="catalog_item_text">Desserts</p>
+                </li>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <footer>
