--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
             <ul class="nav_list">
                 <li>
-                    <a href="#" class="nav_list_title">Main page</a>
+                    <a href="#" class="nav_header_title">Main page</a>
                 </li>
                 <li>
-                    <a href="#" class="nav_list_title">Promotions</a>
+                    <a href="#" class="nav_header_title">Promotions</a>
                 </li>
                 <li>
-                    <a href="#" class="nav_list_title">About Us</a>
+                    <a href="#" class="nav_header_title">About Us</a>
                 </li>
             </ul>
 
@@ -30,7 +30,7 @@
         </nav>
 
         <div class="container_page_header">
-            <ul class="text_header_list">
+            <ul class="header_list">
                 <li>
                     <p class="text_header">Fast delivery for you</p>
                 </li>
@@ -75,15 +75,44 @@
                     <img src="/images/desserts.png" alt="desserts" width="450" height="300">
                     <p class="catalog_item_text">Desserts</p>
                 </li>
-                </li>
             </ul>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer_page">
+        <ul class="footer_list">
+            <li>
+                <a href="#" class="nav_footer_title">Loyalty program</a>
+            </li>
+            <li>
+                <a href="#" class="nav_footer_title">Privacy policy</a>
+            </li>
+            <li>
+                <a href="#" class="nav_footer_title">Offer contract</a>
+            </li>
+        </ul>
 
+        <ul class="footer_page_list">
+            <li>
+                <p class="footer_text">LLC «Vintage Food»</p>
+            </li>
+            <li>
+                <p class="footer_text">© All right reserved</p>
+            </li>
+        </ul>
+
+        <ul class="footer_contacts">
+            <li>
+                <a href="#">
+                    <img src="/images/VK.png" alt="VK" width="50" height="50">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="/images/Telegram.png" alt="Telegram" width="60" height="60">
+                </a>
+            </li>
+        </ul>
     </footer>
-
-
 </body>
 </html>
