--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header_page">
         <nav class="nav">
             <a href="#">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="logo" class="logo">
             </a>
 
             <ul class="nav_list">
