--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Vintage Food</title>
 </head>
@@ -26,7 +28,7 @@
             </ul>
 
             <button type="button" class="nav_button">
-                <img src="/images/basket.png" alt="basket">
+                <img src="/images/basket.png" alt="basket" width="60" height="60">
             </button>
         </nav>
 
@@ -53,27 +55,27 @@
             <h1 class="catalog_title">Menu</h1>
             <ul class="catalog_list">
                 <li class="catalog_item">
-                    <img src="/images/burgers.png" alt="burgers" width="450" height="300">
+                    <img src="/images/burgers.png" alt="burgers" width="400" height="250">
                     <p class="catalog_item_text">Burgers</p>
                 </li>
                 <li class="catalog_item">
-                    <img src="/images/chicken_dishes.png" alt="chicken_dishes" width="450" height="300">
+                    <img src="/images/chicken_dishes.png" alt="chicken_dishes" width="400" height="250">
                     <p class="catalog_item_text">Chiken dishes</p>
                 </li>
                 <li class="catalog_item">
-                    <img src="/images/warm_meals.png" alt="warm_meals" width="450" height="300">
+                    <img src="/images/warm_meals.png" alt="warm_meals" width="400" height="250">
                     <p class="catalog_item_text">Warm meals</p>
                 </li>
                 <li class="catalog_item">
-                    <img src="/images/refreshments.png" alt="refreshments" width="450" height="300">
+                    <img src="/images/refreshments.png" alt="refreshments" width="400" height="250">
                     <p class="catalog_item_text">Refreshments</p>
                 </li>
                 <li class="catalog_item">
-                    <img src="/images/salads.png" alt="salads" width="450" height="300">
+                    <img src="/images/salads.png" alt="salads" width="400" height="250">
                     <p class="catalog_item_text">Salads</p>
                 </li>
                 <li class="catalog_item">
-                    <img src="/images/desserts.png" alt="desserts" width="450" height="300">
+                    <img src="/images/desserts.png" alt="desserts" width="400" height="250">
                     <p class="catalog_item_text">Desserts</p>
                 </li>
             </ul>
@@ -105,12 +107,12 @@
         <ul class="footer_contacts">
             <li>
                 <a href="#">
-                    <img src="/images/VK.png" alt="VK" width="50" height="50">
+                    <img src="/images/VK.png" alt="VK" width="53" height="53" class="footer_images VK">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="/images/Telegram.png" alt="Telegram" width="60" height="60">
+                    <img src="/images/Telegram.png" alt="Telegram" width="59" height="59" class="footer_images">
                 </a>
             </li>
         </ul>
